# ipmsg-torrent

./: .gitignore  ANDROID_BUILD.md  ANDROID_MIRRORS.md  BUILD_STATUS.md  CHANGELOG.md  DOWNLOADS.md  LICENSE  LOCAL_BUILD.md  QUICKSTART.md  README.md  build-all.sh  build-android.sh  build-linux.sh  build-win.sh  build.sh  capacitor.config.json  electron-builder.yml  generate-icon.cjs  generate-icons.cjs  index.html  main.js  p2p.js  package-lock.json  package.json  renderer.js  style.css  vite.config.js
.github/workflows/: build.yml  ci.yml  mirror.yml  release.yml
android/: build.gradle  generate-keystore.sh  gradle.properties  init.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: capacitor.config.json  capacitor.plugins.json
android/app/src/main/assets/public/: index.html
android/app/src/main/assets/public/assets/: main-B2u1Q1a0.css  main-BWmon091.js  main-DAEhjpwD.js
android/app/src/main/java/com/ipmsg/torrent/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: config.xml  file_paths.xml
android/gradle/wrapper/: gradle-wrapper.properties
electron/: main.js  preload.js
ipmsg-torrent/: .gitignore  Cargo.toml  README.md  build-release.sh
ipmsg-torrent/.github/workflows/: release.yml
ipmsg-torrent/crates/app/src-tauri/: Cargo.toml  tauri.conf.json
ipmsg-torrent/crates/app/src-tauri/capabilities/: default.json
ipmsg-torrent/crates/app/src-tauri/src/: lib.rs  main.rs
ipmsg-torrent/crates/cli/: Cargo.toml
ipmsg-torrent/crates/cli/src/: main.rs
ipmsg-torrent/crates/core/: Cargo.toml
ipmsg-torrent/crates/core/src/: bloom.rs  discovery.rs  file_sharing.rs  file_transfer.rs  fragment.rs  identity.rs  ipmsg_compat.rs  lib.rs  messaging.rs  noise.rs  ratelimit.rs  scoring.rs  stats.rs  store.rs  transport.rs
ipmsg-torrent/crates/protocol/: Cargo.toml
ipmsg-torrent/crates/protocol/src/: codec.rs  lib.rs  message.rs
ipmsg-torrent/fdroid/: com.ipmsg.torrent.yml
ipmsg-torrent/wasm/: Cargo.toml
ipmsg-torrent/wasm/src/: lib.rs
public/: manifest.json
src/: app.js  index.html  style.css
src/core/: p2p.js
src/utils/: uuid.js
