[workspace]
members = [
    "crates/protocol",
    "crates/core",
    "crates/cli",
    "crates/app/src-tauri",
    "wasm",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "IPMsg-Torrent: Decentralized P2P chat based on libp2p"

[profile.release]
opt-level = "z"           # 最小化二进制体积
lto = "fat"              # 最大 LTO 优化
codegen-units = 1        # 单 codegen 单元以获得更好优化
strip = true             # 剥离符号信息
panic = "abort"          # 减小体积
overflow-checks = false  # 禁用溢出检查以提升性能

[workspace.dependencies]
# Protocol
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"

# Cryptography
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
x25519-dalek = "2"

# Performance
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }

# Core
libp2p = { version = "0.53", default-features = false, features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "request-response",
    "identify",
    "ping",
] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rusqlite = { version = "0.32", features = ["bundled", "series"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# CLI
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
