[workspace]
members = [
    "crates/protocol",
    "crates/core",
    "crates/cli",
    "crates/app/src-tauri",
    "wasm",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "IPMsg-Torrent: Decentralized P2P chat based on libp2p"

[workspace.dependencies]
# Protocol
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
uuid = { version = "1", features = ["v4", "serde", "js"] }
sha2 = "0.10"

# Cryptography
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
x25519-dalek = "2"

# Performance
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }

# Core
libp2p = { version = "0.55", features = [
    "tokio", "macros", "tcp", "quic", "dns", "noise", "yamux",
    "mdns", "kad", "gossipsub", "request-response",
    "identify", "ping", "relay", "dcutr", "autonat",
] }
mime_guess = "2"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rusqlite = { version = "0.32", features = ["bundled", "series"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# CLI
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
