[package]
name = "ipmsg-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for IPMsg-Torrent web client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ipmsg-core = { path = "../crates/core" }
ipmsg-protocol = { path = "../crates/protocol" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
# Required for WASM target - enables js feature for getrandom
getrandom = { version = "0.2", features = ["js"] }
# Also need getrandom 0.3 with wasm_js feature
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
