[package]
name = "ipmsg-core"
version.workspace = true
edition.workspace = true
description = "P2P networking engine for IPMsg-Torrent"

[dependencies]
ipmsg-protocol = { path = "../protocol" }
libp2p = { workspace = true }
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
snow = { workspace = true }
chacha20poly1305 = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bs58 = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = "1"
serde_cbor = { workspace = true }
lz4_flex = { workspace = true }
sha2 = { workspace = true }
