[package]
name = "ipmsg-core"
version.workspace = true
edition.workspace = true
description = "P2P networking engine for IPMsg-Torrent"

[dependencies]
ipmsg-protocol = { path = "../protocol" }
libp2p = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
snow = { workspace = true }
chacha20poly1305 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bs58 = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = "1"
serde_cbor = { workspace = true }
lz4_flex = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
mime_guess = "2.0"
gethostname = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
