[package]
name = "ipmsg-app"
version.workspace = true
edition.workspace = true
description = "IPMsg-Torrent Desktop/Mobile App (Tauri v2)"

[lib]
name = "ipmsg_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ipmsg-core = { path = "../../core" }
ipmsg-protocol = { path = "../../protocol" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }
